CHANGELOG
---------

Version 0.9.9.2 - 131017
- MAJOR: new install will use engine MySQL InnoDB
- MAJOR: replace term 'slid' with 'smslog_id'
- MAJOR: smslog_id is from tblSMSOutgoing_queue_dst and immediately returns on sendsms
- add new plugin pluginmanager to manage plugins (enumanc)
- add new gateway Infobip (enumanc)
- add new daemon dlrssmsd and recvsmsd to increase performance
- update to immediately cancel send SMS after fail with not enough credit
- update default daemon files locations from /usr/local/bin/ to /usr/local/bin/_playsms/
- update all plugin gateway to use recvsms() instead of setsmsincomingaction()
- update all plugin gateway to use dlr() instead of setsmsdeliverystatus()
- update themes to load jquery.js
- fix catchall feature on inboxgroup
- fix location to hint.png
- fix fail to finalize queue creation
- fix icons for reply, resend and forward link
- fix datetime for incoming SMS to use $datetime_now value instead of supplied by Kannel

Version 0.9.9.1 - 130902
- add new webservices type of action IX to get SMS on user's inbox
- add logger_print() at the begining and the end of webservices
- add DBHOST and DBPORT on install script
- add common place to put common js files, themes/common/jscss
- add sendsms_host option in kannel gateway module (lucastx)
- add option to load/parse .html and .md files on page_welcome
- add hints with tooltip
- add new option CSS URL to decorate sms_board
- add new gateway Twilio twilio.com
- add new language de_DE Deutsch (andre)
- add lib/version.php contains version number
- add automatically set Unicode if non-latin chars typed and vice versa (dvoryanchikov)
- update kannel gateway related to account and dcs (dvoryanchikov)
- update log level to 3 for clickatell getsmsstatus
- update lang, more new translations on pt_BR (gschanuel)
- upgrade themes default, re-design
- upgrade all plugins to match new themes stuffs
- upgrade action icons, use common icons for all themes but can be overriden