@@ -2,40 +2,21 @@
 defined('_SECURE_') or die('Forbidden');
 if(!valid()){forcenoaccess();};
 
-$content = "
-	<script src='" . $core_config['http_path']['themes'] . "/common/jscss/jquery.easytabs.js' type='text/javascript'></script>
-	<script type='text/javascript'>
-		$(document).ready( function() {
-		$('#tab-container').easytabs();
-	});
-	</script>
+$t['HTTP_PATH_THEMES'] = HTTP_PATH_THEMES;
 
-	<h2>"._('Welcome to playSMS')."</h2>
-	<div id='tab-container' class='tab-container'>
-		<ul class='tabs'>
-			<li class='tab'><a href='#tabs-about'>" . _ ( 'About playSMS' ) . "</a></li>
-			<li class='tab'><a href='#tabs-changelog'>" . _ ( 'Changelog' ) . "</a></li>
-			<li class='tab'><a href='#tabs-faq'>" . _ ( 'F.A.Q' ) . "</a></li>
-			<li class='tab'><a href='#tabs-license'>" . _ ( 'License' ) . "</a></li>
-			<li class='tab'><a href='#tabs-webservices'>" . _ ( 'Webservices' ) . "</a></li>
-		</ul>
-		<div id='tabs-about'>
-			" . core_read_docs($apps_path['base'], 'README') . "
-		</div>
-		<div id='tabs-changelog'>
-			" . core_read_docs($apps_path['base'], 'CHANGELOG') . "
-		</div>
-		<div id='tabs-faq'>
-			" . core_read_docs($apps_path['base'], 'FAQ') . "
-		</div>
-		<div id='tabs-license'>
-			" . core_read_docs($apps_path['base'], 'LICENSE') . "
-		</div>
-		<div id='tabs-webservices'>
-			" . core_read_docs($apps_path['base'], 'WEBSERVICES') . "
-		</div>			
-	</div>";
+$t['Welcome to playSMS'] = _('Welcome to playSMS');
+$t['About playSMS'] = _('About playSMS');
+$t['Changelog'] = _('Changelog');
+$t['F.A.Q'] = _('F.A.Q');
+$t['License'] = _('License');
+$t['Webservices'] = _('Webservices');
 
-echo $content;
+$t['READ_README'] = core_read_docs($apps_path['base'], 'README');
+$t['READ_CHANGELOG'] = core_read_docs($apps_path['base'], 'CHANGELOG');
+$t['READ_FAQ'] = core_read_docs($apps_path['base'], 'FAQ');
+$t['READ_LICENSE'] = core_read_docs($apps_path['base'], 'LICENSE');
+$t['READ_WEBSERVICES'] = core_read_docs($apps_path['base'], 'WEBSERVICES');
+
+echo tpl_apply_common('page_welcome', $t);
 
 ?>
