@@ -10,6 +10,7 @@ include $apps_path['libs']."/fn_recvsms.php";
 include $apps_path['libs']."/fn_sendsms.php";
 include $apps_path['libs']."/fn_phonebook.php";
 include $apps_path['libs']."/fn_themes.php";
+include $apps_path['libs']."/fn_tpl.php";
 include $apps_path['libs']."/fn_webservices.php";
 include $apps_path['libs']."/fn_csv.php";
 include $apps_path['libs']."/fn_download.php";
