@@ -5,6 +5,7 @@ Version 0.9.9.2 - 131017
 - MAJOR: new install will use engine MySQL InnoDB
 - MAJOR: replace term 'slid' with 'smslog_id'
 - MAJOR: smslog_id is from tblSMSOutgoing_queue_dst and immediately returns on sendsms
+- add early support for templates to seperate logic and view
 - add new plugin pluginmanager to manage plugins (enumanc)
 - add new gateway Infobip (enumanc)
 - add new daemon dlrssmsd and recvsmsd to increase performance
